getAllStudentMarks with real date and not_is_sem filter